version 0.48
	* AlarmDialog : disable action combobox for now, it has no effect

version 0.47 (2025/02/05)
	* Disable alarm sound backend and log a error if the sound
	  file can't be found
	* Fix cross-compilation (Yavor Doganov)

version 0.46 (2021/10/17)
	* Make automatic local agenda work on first startup and
	  afterwards

version 0.45 (2021/10/10)
	* Migrate testsuite from ObjcUnit to the GNUstep Test Framework
	  patch from Yavor Doganov
	* Add Due Date column in the task view as suggested by Xylemon
	* Handle calendar resource type when looking for CalDAV directories
	  (fixes GitHub issue #4)
	* Advertise iCal v2
	* Update configure to work with clang
	* Add support for GroupDAV well-known URL scheme, thanks to
	  Graham Lee and Steven R. Baker
	* Handle login and password cleanly in GroupDAV creation dialog
	  Graham Lee and Steven R. Baker

version 0.44 (2017/11/20)
	* Fix missing -document methods in appointment and tasks editor
	* Compilation warnings fixes from Yavor Doganov
	* autoconf & co fixes also from Yavor Doganov
	* Change main window geometry (make all views visible)

version 0.43 (2012/09/15)
	* Fix ticket #19 : preface.h doesn't exist anymore in GNUstep
	  so stop including it just for the MAX macro
	* Fix ticket #18 with a patch from Sebastian
	  (note to self : learn shell syntax)
	* Fix ticket #20 with a patch from Sebastian
	* Add Italian translation from Bertalan Ivan
	* Start conversion from badly written threaded code to NSOperation
	* New implementation of ConfigManager (again...)
	* Make the main window closable
	* Fix race between store loading and window first display
	* Implement an old feature request from Dennis Leeuw : in the day view
	  you can right click on an appointment and make it sticky. You won't be
	  able to mistakenly move it or resize it.
	* Add a contextual menu to move an appointment from a calendar to another
	* Type 'make tests=yes' to build and run the 'testsuite'

version 0.42 (2011/04/27)