@@ -1,5 +1,7 @@
 version 0.48
 	* AlarmDialog : disable action combobox for now, it has no effect
+	* WebDAVResource : don't handle authentication manually and badly and
+	  enjoy digest authentication offered by NSURLAuthenticationChallenge
 
 version 0.47 (2025/02/05)
 	* Disable alarm sound backend and log a error if the sound
